--- a/src/components/Proyectos/projectsData.json
+++ b/src/components/Proyectos/projectsData.json
@@ -5,6 +5,6 @@
     "deployLink": "https://c12-accessbank.vercel.app/",
     "githubLink": "https://github.com/No-Country/c12-41-m-react-agregarback",
     "infoLink": "https://www.linkedin.com/feed/update/urn:li:activity:7091227382266626048/",
-    "imageSrc": "../../assets/accessbank.png"
+    "imageSrc": "../../assets/accesbank.png"
   }
 ]
