--- a/src/components/Proyectos/projectsData.json
+++ b/src/components/Proyectos/projectsData.json
@@ -1,7 +1,7 @@
 [
   {
     "title": "Acces Bank",
-    "description": "Trabajo realizado en el contrato de practicas de la empresa No-Country, Tecnologías: JavaScript React React Router NodeJS MySQL Express.js Tailwindcss",
+    "description": "Work done in the internship contract of the No-Country company, Technologies: JavaScript React React Router NodeJS MySQL Express.js Tailwindcss",
     "deployLink": "https://c12-accessbank.vercel.app/",
     "githubLink": "https://github.com/No-Country/c12-41-m-react-agregarback",
     "infoLink": "https://www.linkedin.com/feed/update/urn:li:activity:7091227382266626048/",
